// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preset should create files (preset = angular) 1`] = `
Array [
  ".browserslistrc",
  "tsconfig.app.json",
  "tsconfig.spec.json",
  "src",
  "tsconfig.editor.json",
  "tsconfig.json",
  ".eslintrc.json",
  "jest.config.ts",
]
`;

exports[`preset should create files (preset = angular) 2`] = `
Array [
  "favicon.ico",
  "index.html",
  "main.ts",
  "polyfills.ts",
  "styles.css",
  "assets",
  "environments",
  "app",
  "test-setup.ts",
]
`;

exports[`preset should create files (preset = angular) 3`] = `
Array [
  "app.module.ts",
  "app.component.css",
  "app.component.html",
  "app.component.spec.ts",
  "app.component.ts",
  "nx-welcome.component.ts",
]
`;

exports[`preset should create files (preset = web-components) 1`] = `
Array [
  ".babelrc",
  "browserslist",
  "src",
  "tsconfig.app.json",
  "tsconfig.json",
  ".eslintrc.json",
  "jest.config.ts",
  "tsconfig.spec.json",
]
`;

exports[`preset should create files (preset = web-components) 2`] = `
Array [
  "app",
  "assets",
  "environments",
  "favicon.ico",
  "index.html",
  "main.ts",
  "polyfills.ts",
  "styles.css",
  "test-setup.ts",
]
`;

exports[`preset should create files (preset = web-components) 3`] = `
Array [
  "app.element.css",
  "app.element.spec.ts",
  "app.element.ts",
]
`;
